deploy: eb7a56281c80c3c2ba3a9425bc464f42c11143e6

--- a/talks/saussure-general-linguistics/index.html
+++ b/talks/saussure-general-linguistics/index.html
@@ -19,10 +19,10 @@
 <h2 id="版本">版本</h2>
 <ul>
 <li>ZHO: 《普通语言学教程》，索绪尔著，高名凯译，商务印书馆1980版（ISBN 978-7-100-02086-2）</li>
-<li>
-<p>ENG: <em>Course in General Linguistics</em>, Ferdinand de Saussure, translated by Wade Baskin, Columbia University Press 2011 (ISBN 978-0-231-15727-8)</p>
+<li>ENG: <em>Course in General Linguistics</em>, Ferdinand de Saussure, translated by Wade Baskin, Columbia University Press 2011 (ISBN 978-0-231-15727-8)</li>
+</ul>
 <h2 id="语言概述">语言概述</h2>
-</li>
+<ul>
 <li><strong>语言</strong>（lingue）是属于社会（具体来说应该是一个特定的<strong>语言社团</strong>）的一种规约，而<strong>言语</strong>（parole）是一种<strong>个人</strong>的行为。<strong>语言</strong>才是语言学最核心的研究对象。</li>
 <li>语言产生于言语活动，但不受制于言语活动——比如说，没有人使用的死语言仍然是一种语言。</li>
 <li>言语本身是连续的，包含无穷多的异质的细节，而语言则是<strong>离散化</strong>的一套符号系统。举例来说，在张三的言语中基频 110 Hz 的一个声调和李四的基频 105 Hz 的一个声调，在语言中则视作是同一个声调。也许可以说，言语是语言的一种具体实现（而文字则是它的另外一种实现）。</li>
