--- a/talks/saussure-general-linguistics/index.html
+++ b/talks/saussure-general-linguistics/index.html
@@ -17,10 +17,27 @@
   </script><link rel="icon" href="/blog/favicon-32x32.png?v=b093088437b6361b7fc51afead561aed" type="image/png"/><link rel="manifest" href="/blog/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/blog/icons/icon-48x48.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="72x72" href="/blog/icons/icon-72x72.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="96x96" href="/blog/icons/icon-96x96.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="144x144" href="/blog/icons/icon-144x144.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="192x192" href="/blog/icons/icon-192x192.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="256x256" href="/blog/icons/icon-256x256.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="384x384" href="/blog/icons/icon-384x384.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="512x512" href="/blog/icons/icon-512x512.png?v=b093088437b6361b7fc51afead561aed"/><title data-react-helmet="true">索绪尔《普通语言学教程》读书笔记 | Pak</title><meta data-react-helmet="true" name="description" content="This is a blоg, not a blοg."/><meta data-react-helmet="true" property="og:title" content="索绪尔《普通语言学教程》读书笔记"/><meta data-react-helmet="true" property="og:description" content="This is a blоg, not a blοg."/><meta data-react-helmet="true" property="og:type" content="article"/><meta data-react-helmet="true" property="og:site-name" content="Pak"/><meta data-react-helmet="true" property="og:image" content="/blog/icon.png"/><link as="script" rel="preload" href="/blog/webpack-runtime-05732d5c35a9369e7d73.js"/><link as="script" rel="preload" href="/blog/framework-56253b3dadd752377c6f.js"/><link as="script" rel="preload" href="/blog/app-7ebc7ce3102479be17ce.js"/><link as="script" rel="preload" href="/blog/styles-407fe62976dc5310c43e.js"/><link as="script" rel="preload" href="/blog/component---src-templates-talk-js-52102a4c9358d0e00c0f.js"/><link as="fetch" rel="preload" href="/blog/page-data/talks/saussure-general-linguistics/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/sq/d/2243046057.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/sq/d/63159454.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><h1 class="title" style="margin-bottom:0">索绪尔《普通语言学教程》读书笔记</h1><span class="subtitle" style="display:inline-block"><time style="margin-right:1em">2021/02/22</time><span style="color:var(--clr-ac);font-weight:bold"><span class="chip"><a href="/blog/categories/语言学">语言学</a></span></span><span><span class="chip"><a href="/blog/categories/语言学">@理论语言学</a></span></span><span style="color:var(--clr-dm)"><span class="chip">#结构主义</span><span class="chip">#索绪尔</span></span></span><article><p>现代语言学及结构主义语言学开山之作《普通语言学教程》的读书笔记。</p>
 <!-- more -->
 <h2 id="版本">版本</h2>
-<ul>
-<li>ZHO: 《普通语言学教程》，索绪尔著，高名凯译，商务印书馆1980版（ISBN 978-7-100-02086-2）</li>
-<li>ENG: <em>Course in General Linguistics</em>, Ferdinand de Saussure, translated by Wade Baskin, Columbia University Press 2011 (ISBN 978-0-231-15727-8)</li>
-</ul>
+<div class="gatsby-highlight" data-language="bibtex"><pre class="language-bibtex"><code class="language-bibtex">@book{ZHO,
+  author    = {索绪尔 1857-1913 (Saussure, Ferdinand de) and 高名凯},
+  year      = {2017},
+  title     = {普通语言学教程},
+  publisher = {商务印书馆},
+  address   = {北京},
+  isbn      = {7100139635;9787100139632;},
+  language  = {Chinese}
+}
+
+@book{ENG,
+  author    = {Saussure,Ferdinand d. and Baskin,Wade and Meisel,Perry and Saussy,Haun},
+  year      = {2011;2017;},
+  title     = {Course in general linguistics},
+  publisher = {Columbia University Press},
+  address   = {New York},
+  keywords  = {Language and languages; Comparative linguistics},
+  isbn      = {0231527950;9780231157278;9780231157261;9780231527958;0231157266;0231157274;9781912302857;1912302853;9781912281732;1912281732;},
+  language  = {English}
+}</code></pre></div>
+<hr class="talk-separator" />
 <h2 id="语言概述">语言概述</h2>
 <ul>
 <li><strong>语言</strong>（lingue）是属于社会（具体来说应该是一个特定的<strong>语言社团</strong>）的一种规约，而<strong>言语</strong>（parole）是一种<strong>个人</strong>的行为。<strong>语言</strong>才是语言学最核心的研究对象。</li>
