deploy: 02016e60cb3c823ab3f455cf2a37bcb1f5860664

--- a/talks/saussure-general-linguistics/index.html
+++ b/talks/saussure-general-linguistics/index.html
@@ -48,5 +48,22 @@
 <li>因为语言符号处于<strong>永续</strong>的过程中（‘perpetuates itself’, ENG 74，ZHO 翻译有问题），所以它不可避免地在<strong>发生变化</strong>，但这种变化<strong>不受个人意志的影响</strong>，甚至在大部分情况下不受语言社团的集体意志的影响。</li>
 <li>由于任意性的存在，语言符号的一切变化皆是合法的。</li>
 <li><strong>共时</strong>（synchronic）语言规律<strong>普遍但不强制</strong>(general but not imperative），历时（diacronic）语言规律<strong>强制但不普遍</strong>。共时规律的例子：普通话的音节尾辅音只能是 /n/ 或 /ŋ/；历时规律的例子：中古汉语音节尾辅音 /m/ 在普通话中都变为 /n/。具体来说，共时规律是<strong>对语言符号系统的一个状态的归纳和描述</strong>，状态不是稳固的，随着语言演变，共时规律无法阻止这种状态被破坏，因此它不具有强制性。而历时规律是<strong>语言符号变化的规律</strong>，这种变化总是偶然的（有点类似基因突变，随机且不定向），因此它不普遍（没有很强的规律性，比较零散细碎）。</li>
-<li><strong>历时变化是从言语中产生的</strong>，个人的言语创新在整个语言社团中被接纳时即成为了语言的一部分，成为历时变化的材料。</li>
+<li>
+<p><strong>历时变化是从言语中产生的</strong>，个人的言语创新在整个语言社团中被接纳时即成为了语言的一部分，成为历时变化的材料。</p>
+<hr class="talk-separator" />
+</li>
+</ul>
+<h2 id="共时语言学">共时语言学</h2>
+<ul>
+<li>共时语言学研究的一个语言状态是语言变化过程中极短的一段时间中语言的情况，其间一切语言的演变可以忽略不计，而不是研究一个时间点下的语言。</li>
+<li><strong>切分语言单位</strong>（delimiting linguistic units）是语言学研究的前提工作。这是基于以下一条公设：言语本身是连续的，但语言可以被切分为<strong>离散的语言单位</strong>（如音段、语素等等）。</li>
+<li>切分语言单位的根本困难在于，实际处理的语料属于<em>言语</em>，而最终要得到<em>语言</em> 的片段，中间必须经过一层抽象归纳（从个体的行为抽象出其背后集体的规约），这需要大量语料作为支持。</li>
+<li><strong>同一性</strong>是切分的参考标准。在切分语素过程中，同一性通常指<strong>音义一致（一致指不构成对立）</strong>。语言单位之间一定存在界限，但没有<em>明确的判断标准</em>（positive terms）。</li>
+<li>在确定语言事实（linguistic reality）时，语义（非语言系统的因素）和语法（语言系统的因素）都要纳入考量。</li>
+<li><strong>语言中的结合（即语言符号）是一种形式（form）</strong>（ZHO 153），而不是物质（substance）。即：语言符号是松散、不稳定的，因此在语言学中我们着重研究符号连接起来的音、义两方面，而非符号本体。语言符号及其他语言单位的价值都是由<strong>对立</strong>确立的，正所谓“<strong>语言中只有差别</strong>”（ZHO 161）。</li>
+<li>语言符号间普遍存在两种关系：<strong>组合</strong>（旧译句段关系，syntagme）和<strong>聚合</strong>（旧译联想关系，association）。前者指在实际言语中由小单位组成更大的单位，后者指人语言库中具有相同特征的一类单位（如语义基本相同下的派生词等）</li>
+<li>语言符号在组合后，许多情况下，组成的整体的值大于部分之和。</li>
+<li>语法纯粹是共时层面的概念。</li>
+<li>语言系统中除了语言符号还存在其他抽象实体（如语序、语法格、论元结构等）。</li>
+<li>结构主义语言学从<strong>描写言语</strong>入手分析实体，构建共时语言系统的模型，因此不承认空位、底层结构的存在。<del>所以生成语法好</del>。</li>
 </ul></article></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/talks/saussure-general-linguistics";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-2cb897c2a056d28c9332.js"],"app":["/app-7ebc7ce3102479be17ce.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-b0556ce5127c1a3e2490.js"],"component---src-pages-404-js":["/component---src-pages-404-js-649c74ce69f26c0d10b1.js"],"component---src-pages-about-js":["/component---src-pages-about-js-e0aebf3a2350a78a646e.js"],"component---src-pages-friends-js":["/component---src-pages-friends-js-3bf1c3927cd00c7e3499.js"],"component---src-pages-index-js":["/component---src-pages-index-js-f8128ed837a597015a8d.js"],"component---src-pages-others-js":["/component---src-pages-others-js-133d840b1a85140ea8a7.js"],"component---src-pages-posts-js":["/component---src-pages-posts-js-d24b54be191697f815f2.js"],"component---src-pages-sheets-js":["/component---src-pages-sheets-js-2ac90c78d5a978e57eed.js"],"component---src-pages-talks-js":["/component---src-pages-talks-js-8706e773531cd7b0ac13.js"],"component---src-templates-category-js":["/component---src-templates-category-js-44b5ca0b1dcd1bf90a44.js"],"component---src-templates-post-js":["/component---src-templates-post-js-28b83b4e952bf70dbad2.js"],"component---src-templates-sheet-js":["/component---src-templates-sheet-js-d14139b2632da374953f.js"],"component---src-templates-talk-js":["/component---src-templates-talk-js-52102a4c9358d0e00c0f.js"]};/*]]>*/</script><script src="/blog/polyfill-2cb897c2a056d28c9332.js" nomodule=""></script><script src="/blog/component---src-templates-talk-js-52102a4c9358d0e00c0f.js" async=""></script><script src="/blog/styles-407fe62976dc5310c43e.js" async=""></script><script src="/blog/app-7ebc7ce3102479be17ce.js" async=""></script><script src="/blog/framework-56253b3dadd752377c6f.js" async=""></script><script src="/blog/webpack-runtime-c91f7bdbafd530078b12.js" async=""></script></body></html>
