deploy: ac5ce67317ae21122c4b657239f17390f2df3a94

--- a/talks/saussure-general-linguistics/index.html
+++ b/talks/saussure-general-linguistics/index.html
@@ -14,7 +14,7 @@
         }
       }
     })
-  </script><link rel="icon" href="/blog/favicon-32x32.png?v=b093088437b6361b7fc51afead561aed" type="image/png"/><link rel="manifest" href="/blog/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/blog/icons/icon-48x48.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="72x72" href="/blog/icons/icon-72x72.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="96x96" href="/blog/icons/icon-96x96.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="144x144" href="/blog/icons/icon-144x144.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="192x192" href="/blog/icons/icon-192x192.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="256x256" href="/blog/icons/icon-256x256.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="384x384" href="/blog/icons/icon-384x384.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="512x512" href="/blog/icons/icon-512x512.png?v=b093088437b6361b7fc51afead561aed"/><title data-react-helmet="true">索绪尔《普通语言学教程》读书笔记 | Pak</title><meta data-react-helmet="true" name="description" content="This is a blоg, not a blοg."/><meta data-react-helmet="true" property="og:title" content="索绪尔《普通语言学教程》读书笔记"/><meta data-react-helmet="true" property="og:description" content="This is a blоg, not a blοg."/><meta data-react-helmet="true" property="og:type" content="article"/><meta data-react-helmet="true" property="og:site-name" content="Pak"/><meta data-react-helmet="true" property="og:image" content="/blog/icon.png"/><link as="script" rel="preload" href="/blog/webpack-runtime-dbb72dc48f14d74ab029.js"/><link as="script" rel="preload" href="/blog/framework-c55b331d5743ed7dd9fe.js"/><link as="script" rel="preload" href="/blog/app-12cb79a9a10274f1cb3e.js"/><link as="script" rel="preload" href="/blog/component---src-templates-talk-js-5b67a51f5c4a928b6a8d.js"/><link as="fetch" rel="preload" href="/blog/page-data/talks/saussure-general-linguistics/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/sq/d/2243046057.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/sq/d/63159454.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><h1 class="title" style="margin-bottom:0">索绪尔《普通语言学教程》读书笔记</h1><span class="subtitle" style="display:inline-block"><time style="margin-right:1em">2021/08/06</time><span style="color:var(--clr-ac);font-weight:bold"><span class="chip"><a href="/blog/categories/语言">语言</a></span></span><span><span class="chip"><a href="/blog/categories/语言#理论语言学">@理论语言学</a></span></span><span style="color:var(--clr-dm)"><span class="chip">#结构主义</span><span class="chip">#索绪尔</span></span></span><article><p>现代语言学及结构主义语言学开山之作《普通语言学教程》的读书笔记。</p>
+  </script><link rel="icon" href="/blog/favicon-32x32.png?v=b093088437b6361b7fc51afead561aed" type="image/png"/><link rel="manifest" href="/blog/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/blog/icons/icon-48x48.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="72x72" href="/blog/icons/icon-72x72.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="96x96" href="/blog/icons/icon-96x96.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="144x144" href="/blog/icons/icon-144x144.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="192x192" href="/blog/icons/icon-192x192.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="256x256" href="/blog/icons/icon-256x256.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="384x384" href="/blog/icons/icon-384x384.png?v=b093088437b6361b7fc51afead561aed"/><link rel="apple-touch-icon" sizes="512x512" href="/blog/icons/icon-512x512.png?v=b093088437b6361b7fc51afead561aed"/><title data-react-helmet="true">索绪尔《普通语言学教程》读书笔记 | Pak</title><meta data-react-helmet="true" name="description" content="This is a blоg, not a blοg."/><meta data-react-helmet="true" property="og:title" content="索绪尔《普通语言学教程》读书笔记"/><meta data-react-helmet="true" property="og:description" content="This is a blоg, not a blοg."/><meta data-react-helmet="true" property="og:type" content="article"/><meta data-react-helmet="true" property="og:site-name" content="Pak"/><meta data-react-helmet="true" property="og:image" content="/blog/icon.png"/><link as="script" rel="preload" href="/blog/webpack-runtime-dbb72dc48f14d74ab029.js"/><link as="script" rel="preload" href="/blog/framework-c55b331d5743ed7dd9fe.js"/><link as="script" rel="preload" href="/blog/app-12cb79a9a10274f1cb3e.js"/><link as="script" rel="preload" href="/blog/component---src-templates-talk-js-5b67a51f5c4a928b6a8d.js"/><link as="fetch" rel="preload" href="/blog/page-data/talks/saussure-general-linguistics/page-data.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/sq/d/2243046057.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/sq/d/63159454.json" crossorigin="anonymous"/><link as="fetch" rel="preload" href="/blog/page-data/app-data.json" crossorigin="anonymous"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"><h1 class="title" style="margin-bottom:0">索绪尔《普通语言学教程》读书笔记</h1><span class="subtitle" style="display:inline-block"><time style="margin-right:1em">2021/08/15</time><span style="color:var(--clr-ac);font-weight:bold"><span class="chip"><a href="/blog/categories/语言">语言</a></span></span><span><span class="chip"><a href="/blog/categories/语言#理论语言学">@理论语言学</a></span></span><span style="color:var(--clr-dm)"><span class="chip">#结构主义</span><span class="chip">#索绪尔</span></span></span><article><p>现代语言学及结构主义语言学开山之作《普通语言学教程》的读书笔记。</p>
 <!-- more -->
 <h2 id="版本">版本</h2>
 <pre class="shiki-unknown"><code>@book{ZHO,
@@ -66,4 +66,78 @@
 <li><strong>语法纯粹是共时层面的概念</strong>。</li>
 <li>语言系统中除了语言符号还存在其他抽象实体（如语序、语法格、论元结构等）。</li>
 <li>结构主义语言学从<strong>描写言语</strong>入手分析实体，构建共时语言系统的模型，因此不承认空位、底层结构的存在（个人认为，引入空位有助于解释组合过程中整体大于部分的现象）。但结构主义认可空形式的存在（即一个结构的值为”空”，比如汉语的零声母）。</li>
+</ul>
+<hr class="talk-separator" />
+<h2 id="历时语言学">历时语言学</h2>
+<ul>
+<li>
+<p>索绪尔对历时语言学的思考主要集中在<strong>历时音变</strong>方面，而几乎没有谈及语法规则的演变（他认为语法纯粹是共时的，但实际上他论述的”言语单位的重新分布”已经是语法的历时演变了）。</p>
+</li>
+<li>
+<p>历时演变不仅受语言系统内部（所谓”物理因素”）影响，也受其他语言社团内部的所谓”<em>心理因素</em>“影响。比如法语  prendr-ai（take-1<span style="font-variant: all-small-caps">SG</span>.<span style="font-variant: all-small-caps">FUT</span>，“我将拿”）来自 prendre（take，“拿”）和 ai（have.1<span style="font-variant:all-small-caps">SG</span>，“我有”）的黏合——这个过程是由语言社团先行将两个概念黏合起来而触发的，并非由语言系统内部的某种动力触发。这是对自然主义语言观（语言依确定规则自发演化）的驳斥。</p>
+</li>
+<li>
+<p>索绪尔的音变观几乎完全认可<strong>青年语法学派</strong>（Neogrammarian）的音变论，有两条公设：</p>
+<blockquote>
+<ol>
+<li>音变规律<strong>无例外</strong>。</li>
+<li>音变<strong>只受语音影响</strong>。</li>
+</ol>
+</blockquote>
+<ul>
+<li>第一条公设是说，如果在特定条件下会发生特定音变，则凡符合该条件的语音片段都会发生该音变，也就是”<em>音变规律同时作用在同一语言的所有要素</em> “。</li>
+<li>第二条公设主要是说，音变不受语法和语义的干扰（比如，某个音变既可以发生在一个单纯的名词里，也可以发生在一个动词的形态后缀里）。</li>
+</ul>
+</li>
+<li>
+<p>索绪尔将音变分为”自发”和”组合”两类。无条件和负向条件（比如，后接的元音不是低元音，这种条件阻塞”自发”音变，所以也算作”自发”）的称作”自发”的，正向条件的称作”组合”的。所有的同化作用都归入”组合”音变。</p>
+</li>
+<li>
+<p>青年语法学派的另一个重要观点是<strong>语音渐变</strong>，即音变存在中间状态。比如拉丁语元音间的 /s/ 变为 /r/   的音变（*genesis → generis），索绪尔认为应有浊化（/s/ → /z/）和 r 音化（/z/ → /r/）两步，其中前一步是元音带来的同化作用，而后一步是自发的演变。不过，<a href="https://www.cambridge.org/core/journals/phonology/article/saltation-and-the-pmap/C406844D6625156B6DF4578DFAAC06BC">跳跃现象</a>（saltation）的发现对这种观念提出了挑战。</p>
+</li>
+<li>
+<p>历时音变必须从历时的视角来看待：<strong>历时的音变是在一定时期内发生的，有始有终</strong>，一个音变过程结束后其规则便不适用了。比如拉丁语发生 /sː/ → /s/ 音变时，上文所述 /s/ → /r/ 音变已经结束，因此拉丁语又出现了元音间的 /s/。又比如中古汉语的蟹摄三四等转入止摄的音变 /iɛi/ /iei/ → /i/ 发生时，止摄在齿龈擦音塞擦音后被同化成成音节齿龈近音（“舌尖前元音”）的音变 /i/ → /ɹ̩/ 已经结束，因此诸如”細”一类蟹摄三四等字最后是参与了声母逆同化的音变 /s/ → /ɕ/。</p>
+</li>
+<li>
+<p>音变的发生应当和种族、地域没有直接的关联。不过，音变可能和语言接触有关。</p>
+</li>
+<li>
+<p>音变的<strong>可能结果是不受限的</strong>，经过多个连续的音变过程后，语音形式可能变得面目全非。</p>
+</li>
+<li>
+<p>音变可以破坏原有构词（ZHO 213-214）引发其重分析。比如拉丁语的 in-imīcus（not-friend，敌人）演变到古代法语的 enemi，否定前缀和词根融合，不再可分。</p>
+</li>
+<li>
+<p>音变<strong>没有分流</strong>，这是青年语法学派音变论的第二条公设的推论。同一时间同一语言的某种语音形式，在相同（语音）条件下，不会演变出不同形式。诸如法语 coucher “躺” 和 colloquer “安置” 两个词都来自拉丁语 collocāre 的情况，实际上是法语从拉丁语<em>先后借入同一个词两次</em>，这两次发生了不同的演化的结果。</p>
+</li>
+<li>
+<p>语音交替（alternation）现象本身<strong>不是音变</strong>。交替是共时态下两个语音片段集合之间构成有规律的映射关系的现象，比如德语的 Umlaut 现象：Hand ~ Hände (hand ~ hand\<span style="font-variant: all-small-caps;">PL</span>)、Gast ~ Gäste (guest ~ guest\<span style="font-variant: all-small-caps;">PL</span>)。交替是音变的结果——音变的过程是无法直接从共时态观测到的；同时，交替可能伴随着语法形态变化，但<em>触发音变的仍然是该形态的语音形式</em>，而非其语法功用。比如，Umlaut 现象是由德语复数后缀 /i/ 触发逆同化作用抬高元音 /a/ → /ɛ/ 与复数后缀本身的音变 /i/ → /e/ 叠加的产物——这是复数后缀的 /i/ 引起的，而不是复数引起的。</p>
+</li>
+<li>
+<p>在 Umlaut 现象中，原有的复数规则变成了词中元音交替（ablaut）、再加词缀的新规则；但交替现象不一定会改变原有语法或构词规则。比如拉丁语的 in- (not) 前缀会根据后接音段产生多种变体，如 ir-rēgulāris(not-regular), il-lēgālis(not-legal), im-possibilis(not-possible), i-gnārus(not-knowing)，而并不破坏构词的规则。可见语音和语法词法有一定独立性。</p>
+</li>
+<li>
+<p>类比（analogy）是指以某些语言形式为模型，将其规则推广到其他语言形式上的现象。比如拉丁语的 honōs “荣幸” 对应宾格形式为 honōsem，发生 /s/ → /r/ 音变变为 honōrem，类比其他宾格变化规则（-em），“荣幸”变为 honōr，这就是所谓的“矫枉过正”现象（hypercorrection）。由此，<em>类比是可能引起历时变化的</em>。</p>
+</li>
+<li>
+<p>值得注意的是，<em>类比可能只发生在部分词中</em>——这与“音变无例外”的第一公设相抵触。（也许这就是后来<strong>词汇扩散理论</strong>提出的——语言演变可能是有<em>词汇先后</em> 的。）</p>
+</li>
+<li>
+<p>语言演变很多时候不是一个语言形式在原地直接发生改变，而是语言中产生了新的语言形式，<em>新形式逐步取代旧形式</em> 的过程。</p>
+</li>
+<li>
+<p>重分析（reanalysis）可分为两类：一是<strong>黏合</strong>（agglutination），即两个语言片段丧失各自的语义，联合为一个新的语言片段；二是<strong>边界移动</strong>（boundary shift），即两个相邻的语言片段，其中一者的语音形式移进了相邻的片段，比如拉丁语 Rōm-ānus “罗马人” 中“罗马”的 a 移动到了“人”后缀上。语言使用者自发进行的重分析并没有对错之别。</p>
+</li>
+<li>
+<p>黏合发生后，语言的使用者不再能识别出其中原有的语素。与类比产生的新形式不同，类比可以是两个单位连接后产生高一层次的新单位（比如语素相连产生词），而黏合则通常产生同一层次的新单位（两个语素黏合成新的语素）。</p>
+</li>
+<li>
+<p>语言的历时演变，本质上可以分为两种：<strong>语言单位的改变</strong>（语音和语义的演变）、<strong>语言单位组织、排列规则的改变</strong>（语法的演变）。</p>
+</li>
+<li>
+<p>语言的<strong>历时单位不一定与共时单位对应</strong>。其一，发生演变的单位<strong>不一定以共时单位为单位</strong>（比如语音演变可能以音段为单位，而音段不是共时语言单位）；其二，两个共时态下的<strong>共时单位是否具有同一性较难判断</strong>（音变规则是在同一性基础上推导出来的，用音变规则证明同一性是循环论证）。</p>
+</li>
+<li>
+<p>历时演变可以视作无限多个共时态的“累积”，而每两个共时态之间的演变是可以忽略不计的。</p>
+</li>
 </ul></article></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/talks/saussure-general-linguistics";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-4aead7c350e96d63cda2.js"],"app":["/app-12cb79a9a10274f1cb3e.js"],"component---cache-caches-gatsby-plugin-offline-app-shell-js":["/component---cache-caches-gatsby-plugin-offline-app-shell-js-b9cd79ba7331c19592df.js"],"component---src-pages-404-js":["/component---src-pages-404-js-25327ad2fa1ebaecbee8.js"],"component---src-pages-about-js":["/component---src-pages-about-js-4e67e8466e87fd0e9dcc.js"],"component---src-pages-friends-js":["/component---src-pages-friends-js-509a1c380ac9ced3bc9d.js"],"component---src-pages-index-js":["/component---src-pages-index-js-73e23ea4dd704db684b6.js"],"component---src-pages-others-js":["/component---src-pages-others-js-435befe3f278be95e7e5.js"],"component---src-pages-posts-js":["/component---src-pages-posts-js-b0db783e28e1f1188f50.js"],"component---src-pages-sheets-js":["/component---src-pages-sheets-js-52b79f5ca357e62fcff8.js"],"component---src-pages-talks-js":["/component---src-pages-talks-js-c8f849a71ab4799e21be.js"],"component---src-templates-category-js":["/component---src-templates-category-js-1d591730f5d7560aff46.js"],"component---src-templates-post-js":["/component---src-templates-post-js-5b22c82570517d0ef787.js"],"component---src-templates-sheet-js":["/component---src-templates-sheet-js-68d14078450ed4eea7a9.js"],"component---src-templates-talk-js":["/component---src-templates-talk-js-5b67a51f5c4a928b6a8d.js"]};/*]]>*/</script><script src="/blog/polyfill-4aead7c350e96d63cda2.js" nomodule=""></script><script src="/blog/component---src-templates-talk-js-5b67a51f5c4a928b6a8d.js" async=""></script><script src="/blog/app-12cb79a9a10274f1cb3e.js" async=""></script><script src="/blog/framework-c55b331d5743ed7dd9fe.js" async=""></script><script src="/blog/webpack-runtime-dbb72dc48f14d74ab029.js" async=""></script></body></html>
