--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,28 @@
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
   <div id="app"></div>
   <script>
-    (function() {
-      const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
-      const setting = localStorage.getItem('color-schema') || 'auto'
-      if (setting === 'dark' || (prefersDark && setting !== 'light'))
-        document.documentElement.classList.toggle('dark', true)
+    (function () {
+      const prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches
+      const setting = localStorage.getItem("color-scheme") || "auto"
+      if (setting === "dark" || (prefersDark && setting !== "light"))
+        document.documentElement.className = "dark";
+
+      const colors = localStorage.getItem("typesetting::accent_color");
+      if (colors) {
+        let colorsMap = JSON.parse(colors);
+        const vars = Object.entries(colorsMap).map(color => `--accent-${color[0]}: ${color[1]};`).join("\n");
+        let colorStyleNode = document.createElement("style");
+        colorStyleNode.type = "text/css";
+        colorStyleNode.innerText = `:root{${vars}}`;
+        document.head.appendChild(colorStyleNode);
+      }
     })()
   </script>
   <script type="module" src="/src/main.ts"></script>
 </body>
+
 </html>
